# cargo-bloat-action

./: .editorconfig  .eslintrc.js  .gitignore  Cargo.toml  README.md  action.yml  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: test.yml
__tests__/: main.test.ts
example_project/: Cargo.toml
example_project/src/: main.rs
example_project_1/: Cargo.toml
example_project_2/: Cargo.toml
example_project_2/src/: main.rs
ignored_project/: Cargo.toml
lib_project/: Cargo.toml
lib_project/src/: lib.rs
rust_project/: Cargo.toml
rust_project/src/: main.rs
rust_project2/: Cargo.toml
rust_project2/src/: main.rs
src/: bloat.ts  comments.ts  main.ts  snapshots.ts  utils.ts
